nuovo formato highlights

--- a/kindle_exports/is-paris-burning.html
+++ b/kindle_exports/is-paris-burning.html
@@ -1,131 +1,15 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "XHTML1-s.dtd" >
-<html xmlns="http://www.w3.org/TR/1999/REC-html-in-xml" xml:lang="en" lang="en">
 
+<!DOCTYPE html>
+
+<html lang="it">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
-<style>
-.bodyContainer {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    padding-left: 32px;
-    padding-right: 32px;
-}
-
-.notebookFor {
-    font-size: 18px;
-    font-weight: 700;
-    text-align: center;
-    color: rgb(119, 119, 119);
-    margin: 24px 0px 0px;
-    padding: 0px;
-}
-
-.bookTitle {
-    font-size: 32px;
-    font-weight: 700;
-    text-align: center;
-    color: #333333;
-    margin-top: 22px;
-    padding: 0px;
-}
-
-.authors {
-    font-size: 13px;
-    font-weight: 700;
-    text-align: center;
-    color: rgb(119, 119, 119);
-    margin-top: 22px;
-    margin-bottom: 24px; 
-    padding: 0px;
-}
-
-.sectionHeading {
-    font-size: 24px;
-    font-weight: 700;
-    text-align: left;
-    color: #333333;
-    margin-top: 24px;
-    padding: 0px;
-}
-
-.noteHeading {
-    font-size: 18px;
-    font-weight: 700;
-    text-align: left;
-    color: #333333;
-    margin-top: 20px;
-    padding: 0px;
-}
-
-.noteText {
-    font-size: 18px;
-    font-weight: 500;
-    text-align: left;
-    color: #333333;
-    margin: 2px 0px 0px;
-    padding: 0px;
-}
-
-.highlight_blue {
-    color: rgb(178, 205, 251);
-}
-
-.highlight_orange {
-    color: #ffd7ae;
-}
-
-.highlight_pink {
-    color: rgb(255, 191, 206);
-}
-
-.highlight_yellow {
-    color: rgb(247, 206, 0);
-}
-
-.notebookGraphic {
-    margin-top: 10px;
-    text-align: left;
-}
-
-.notebookGraphic img {
-    -o-box-shadow:      0px 0px 5px #888;
-    -icab-box-shadow:   0px 0px 5px #888;
-    -khtml-box-shadow:  0px 0px 5px #888;
-    -moz-box-shadow:    0px 0px 5px #888;
-    -webkit-box-shadow: 0px 0px 5px #888;
-    box-shadow:         0px 0px 5px #888; 
-    max-width: 100%;
-    height: auto;
-}
-
-hr {
-    border: 0px none;
-    height: 1px;
-    background: none repeat scroll 0% 0% rgb(221, 221, 221);
-}
-</style>
+<title>is paris burning? - digital orto</title>
+<link href="images/favicon.png" rel="icon" type="image/x-icon"/>
+<link href="../style.css" rel="stylesheet" type="text/css"/>
+<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet"/>
+<meta charset="utf-8"/>
+<meta content="width=device-width" name="viewport"/>
 </head>
 <body>
-<div class='bodyContainer'>
-<h1><div class='notebookFor'>Note ed evidenziazioni di</div><div class='bookTitle'>Is Paris Burning?
-</div><div class='authors'> - 
-Collins, Larry. Lapierre, D
-</div></h1><hr/>
-
-<h2 class='sectionHeading'>PART ONE</h2><h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 132</div><div class='noteText'>For express service, there were super-vélo-taxis towed by four riders. The fastest was pulled by a group of veterans of the Tour de France, France's famous bicycle race.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 1351</div><div class='noteText'>&quot;I can now tell you that if that plane arrives, the man who will be on board will be General de Gaulle.&quot;</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 1449</div><div class='noteText'>'One day I could have destroyed all this, and I preserved it as a gift for humanity.' General, is not that worth all a conqueror's glory?&quot; Von Choltitz was silent. Then he turned to Taittinger, his voice softer now. &quot;You are a good advocate for Paris, Mr. Taittinger,&quot; he said. &quot;You have done your duty well. And likewise I, as a German general, must do mine.&quot;</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 1652</div><div class='noteText'>In those streets in just one week's time, the melancholy passenger of the Lodestar France had a rendezvous with history.</h3>
-<h2 class='sectionHeading'>PART TWO</h2><h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 1698</div><div class='noteText'>For the first time in four years, two months and four days, the French tricolor floated officially from a building in the capital of France.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 1710</div><div class='noteText'>&quot;In the name of the Republic and Charles de Gaulle, I take possession of the Prefecture of Police.&quot;</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 1721</div><div class='noteText'>&quot;M. le Préfet,&quot; Bayet said, &quot;the Prefecture has been taken. It is yours.&quot;</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 1727</div><div class='noteText'>As Luizet entered his Prefecture, a shy man carrying two valises walked in by a side door and stepped into the police laboratory. From his bags he took out eight bottles of sulfuric acid and several pounds of potassium chlorate. Rolling up his sleeves, Frédéric Joliot-Curie took these bottles, borrowed from the laboratory in which his mother-in-law had discovered radium, and began to manufacture Molotov cocktails for the defense of the Prefecture.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 4154</div><div class='noteText'>&quot;But I have promises to keep, and miles to go before I sleep/And miles to go before I sleep.&quot;</h3>
-<h2 class='sectionHeading'>PART THREE</h2><h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 5368</div><div class='noteText'>Each of those figures produced its island of sorrow in the waves of happiness sweeping the city.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 5514</div><div class='noteText'>Without waiting for a reply, he listed for Levy the three items he considered essential for the effective government of France that night: cigarettes, C rations and Coleman lanterns.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 5722</div><div class='noteText'>&quot;After that,&quot; said an American newsman who watched him, &quot;de Gaulle had France in the palm of his hand.&quot;</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 5771</div><div class='noteText'>&quot;The iron,&quot; de Gaulle later wrote with eloquent understatement, &quot;was hot. I struck it.&quot;</h3>
-</div> 
-</body> 
-</html> 
+<h1 align="left"><a href="../index.html">orto</a> &gt; <a href="../libri.html">libri</a> &gt; <a>is paris burning? - highlights</a></h1><main class="lineheight"><p>For express service, there were super-vélo-taxis towed by four riders. The fastest was pulled by a group of veterans of the Tour de France, France's famous bicycle race.</p><p style="text-align:center;">---</p><p>"I can now tell you that if that plane arrives, the man who will be on board will be General de Gaulle."</p><p style="text-align:center;">---</p><p>'One day I could have destroyed all this, and I preserved it as a gift for humanity.' General, is not that worth all a conqueror's glory?" Von Choltitz was silent. Then he turned to Taittinger, his voice softer now. "You are a good advocate for Paris, Mr. Taittinger," he said. "You have done your duty well. And likewise I, as a German general, must do mine."</p><p style="text-align:center;">---</p><p>In those streets in just one week's time, the melancholy passenger of the Lodestar France had a rendezvous with history.</p><p style="text-align:center;">---</p><p>For the first time in four years, two months and four days, the French tricolor floated officially from a building in the capital of France.</p><p style="text-align:center;">---</p><p>"In the name of the Republic and Charles de Gaulle, I take possession of the Prefecture of Police."</p><p style="text-align:center;">---</p><p>"M. le Préfet," Bayet said, "the Prefecture has been taken. It is yours."</p><p style="text-align:center;">---</p><p>As Luizet entered his Prefecture, a shy man carrying two valises walked in by a side door and stepped into the police laboratory. From his bags he took out eight bottles of sulfuric acid and several pounds of potassium chlorate. Rolling up his sleeves, Frédéric Joliot-Curie took these bottles, borrowed from the laboratory in which his mother-in-law had discovered radium, and began to manufacture Molotov cocktails for the defense of the Prefecture.</p><p style="text-align:center;">---</p><p>"But I have promises to keep, and miles to go before I sleep/And miles to go before I sleep."</p><p style="text-align:center;">---</p><p>Each of those figures produced its island of sorrow in the waves of happiness sweeping the city.</p><p style="text-align:center;">---</p><p>Without waiting for a reply, he listed for Levy the three items he considered essential for the effective government of France that night: cigarettes, C rations and Coleman lanterns.</p><p style="text-align:center;">---</p><p>"After that," said an American newsman who watched him, "de Gaulle had France in the palm of his hand."</p><p style="text-align:center;">---</p><p>"The iron," de Gaulle later wrote with eloquent understatement, "was hot. I struck it."</p><p style="text-align:center;">---</p></main></body>
+</html>
