--- a/kindle_exports/jobs.html
+++ b/kindle_exports/jobs.html
@@ -1,136 +1,32 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "XHTML1-s.dtd" >
-<html xmlns="http://www.w3.org/TR/1999/REC-html-in-xml" xml:lang="en" lang="en">
 
+<!DOCTYPE html>
+
+<html lang="it">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
-<style>
-.bodyContainer {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    padding-left: 32px;
-    padding-right: 32px;
-}
-
-.notebookFor {
-    font-size: 18px;
-    font-weight: 700;
-    text-align: center;
-    color: rgb(119, 119, 119);
-    margin: 24px 0px 0px;
-    padding: 0px;
-}
-
-.bookTitle {
-    font-size: 32px;
-    font-weight: 700;
-    text-align: center;
-    color: #333333;
-    margin-top: 22px;
-    padding: 0px;
-}
-
-.authors {
-    font-size: 13px;
-    font-weight: 700;
-    text-align: center;
-    color: rgb(119, 119, 119);
-    margin-top: 22px;
-    margin-bottom: 24px; 
-    padding: 0px;
-}
-
-.sectionHeading {
-    font-size: 24px;
-    font-weight: 700;
-    text-align: left;
-    color: #333333;
-    margin-top: 24px;
-    padding: 0px;
-}
-
-.noteHeading {
-    font-size: 18px;
-    font-weight: 700;
-    text-align: left;
-    color: #333333;
-    margin-top: 20px;
-    padding: 0px;
-}
-
-.noteText {
-    font-size: 18px;
-    font-weight: 500;
-    text-align: left;
-    color: #333333;
-    margin: 2px 0px 0px;
-    padding: 0px;
-}
-
-.highlight_blue {
-    color: rgb(178, 205, 251);
-}
-
-.highlight_orange {
-    color: #ffd7ae;
-}
-
-.highlight_pink {
-    color: rgb(255, 191, 206);
-}
-
-.highlight_yellow {
-    color: rgb(247, 206, 0);
-}
-
-.notebookGraphic {
-    margin-top: 10px;
-    text-align: left;
-}
-
-.notebookGraphic img {
-    -o-box-shadow:      0px 0px 5px #888;
-    -icab-box-shadow:   0px 0px 5px #888;
-    -khtml-box-shadow:  0px 0px 5px #888;
-    -moz-box-shadow:    0px 0px 5px #888;
-    -webkit-box-shadow: 0px 0px 5px #888;
-    box-shadow:         0px 0px 5px #888; 
-    max-width: 100%;
-    height: auto;
-}
-
-hr {
-    border: 0px none;
-    height: 1px;
-    background: none repeat scroll 0% 0% rgb(221, 221, 221);
-}
-</style>
+<title>make something wonderful - digital orto</title>
+<link href="images/favicon.png" rel="icon" type="image/x-icon"/>
+<link href="../style.css" rel="stylesheet" type="text/css"/>
+<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet"/>
+<meta charset="utf-8"/>
+<meta content="width=device-width" name="viewport"/>
 </head>
 <body>
-<div class='bodyContainer'>
-<h1><div class='notebookFor'>Note ed evidenziazioni di</div><div class='bookTitle'>Make Something Wonderful
-</div><div class='authors'> - 
-Jobs, Steve
-</div></h1><hr/>
-
-<h2 class='sectionHeading'>Part I, 1976–1985</h2><h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 219</div><div class='noteText'>‘Every computer is going to work this way. You can’t argue about that anymore. You can argue about how long it will take, but you can’t argue about it anymore.’”</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Speech at the International Design Conference in Aspen &gt; Posizione 323</div><div class='noteText'>The problem was, you can’t ask Aristotle a question. And I think, as we look towards the next fifty to one hundred years, if we really can come up with these machines that can capture an underlying spirit, or an underlying set of principles, or an underlying way of looking at the world, then, when the next Aristotle comes around, maybe if he carries around one of these machines with him his whole life—his or her whole life—and types in all this stuff, then maybe someday, after this person’s dead and gone, we can ask this machine, “Hey, what would Aristotle have said? What about this?” And maybe we won’t get the right answer, but maybe we will.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Speech at the International Design Conference in Aspen &gt; Posizione 343</div><div class='noteText'>What we want to do is put an incredibly great computer in a book that you carry around with you, that you can learn how to use in twenty minutes. That’s what we want to do. And we want to do it this decade. And we really want to do it with a radio link in it so you don’t have to hook up to anything—you’re</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Speech at the International Design Conference in Aspen &gt; Posizione 349</div><div class='noteText'>And what I mean by that is, most of us didn’t make the clothes we’re wearing, and we didn’t cook or grow the food that we eat, and we’re speaking a language that was developed by other people, and we use a mathematics that was developed by other people. We are constantly taking. And the ability to put something back into the pool of human experience is extremely neat.</h3>
-<h2 class='sectionHeading'>Part II, 1985–1996</h2><h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Interview with Terry Gross &gt; Posizione 744</div><div class='noteText'>One of the things that I love is that a very small company, if they invest a lot in their website, can look just as formidable and just as solid on the web as a very large company can.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Speech at Palo Alto High School &gt; Posizione 906</div><div class='noteText'>First and foremost is the notion that your work is different and separate from the rest of your life. If you are passionate about your life and your work, this can’t be so.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Speech at Palo Alto High School &gt; Posizione 924</div><div class='noteText'>I still regret not kissing Nancy Kinniman in high school. Who knows what might have happened? Maybe she regrets it too …</h3>
-<h2 class='sectionHeading'>Part III, 1996–2011</h2><h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 1105</div><div class='noteText'>“Much of what I stumbled into by following my curiosity and intuition turned out to be priceless later on.”</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Speech at Stanford’s Graduate School of Business &gt; Posizione 1870</div><div class='noteText'>“Make what you love your work.”</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Drafting the Stanford Commencement Address &gt; Posizione 1936</div><div class='noteText'>“If this was the last day of my life, would I rather have dinner with the important customers or her?”</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Drafting the Stanford Commencement Address &gt; Posizione 1958</div><div class='noteText'>“If today was the last day of my life, would I want to do what I am about to do today?” And when the answer has been “NO” for too many days in a row, I know I need to change something in my life.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Drafting the Stanford Commencement Address &gt; Posizione 1960</div><div class='noteText'>Another way to think about this is that your life is a story. It’s hard to see it that way when you’re looking forward at 22. But imagine yourself as an old person looking back on your life. Your life will be a story. It will be your story, with its highs and lows, its heros and villains, its forks in the road that mean everything. And if you can remember that your life is a story in the making, it will help you make those important decisions.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Commencement Address at Stanford University &gt; Posizione 2002</div><div class='noteText'>So you have to trust that the dots will somehow connect in your future.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Commencement Address at Stanford University &gt; Posizione 2003</div><div class='noteText'>Because believing that the dots will connect down the road will give you the confidence to follow your heart, even when it leads you off the well-worn path.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Commencement Address at Stanford University &gt; Posizione 2024</div><div class='noteText'>Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven’t found it yet, keep looking.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Commencement Address at Stanford University &gt; Posizione 2032</div><div class='noteText'>Because almost everything—all external expectations, all pride, all fear of embarrassment or failure—these things just fall away in the face of death, leaving only what is truly important.</h3>
-<h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Email from Steve to Himself &gt; Posizione 2359</div><div class='noteText'>I grow little of the food I eat, and of the little I do grow I did not breed or perfect the seeds. I do not make any of my own clothing. I speak a language I did not invent or refine. I did not discover the mathematics I use. I am protected by freedoms and laws I did not conceive of or legislate, and do not enforce or adjudicate. I am moved by music I did not create myself. When I needed medical attention, I was helpless to help myself survive. I did not invent the transistor, the microprocessor, object oriented programming, or most of the technology I work with. I love and admire my species, living and dead, and am totally dependent on them for my life and well being. Sent from my iPad</h3>
-<h2 class='sectionHeading'>One More Thing …</h2><h3 class='noteHeading'>Evidenziazione (<span class='highlight_yellow'>giallo</span>) - Posizione 2381</div><div class='noteText'>Life can be much broader once you discover one simple fact—and that is: everything around you that you call life was made up by people that were no smarter than you.</h3>
-</div> 
-</body> 
-</html> 
+<h1 align="left"><a href="../index.html">orto</a> &gt; <a href="../libri.html">libri</a> &gt; <a>make something wonderful - highlights</a></h1><main class="lineheight"><p>‘Every computer is going to work this way. You can’t argue about that anymore. You can argue about how long it will take, but you can’t argue about it anymore.’”
+Evidenziazione (giallo) - Speech at the International Design Conference in Aspen &gt; Posizione 323</p><p style="text-align:center;">---</p><p>The problem was, you can’t ask Aristotle a question. And I think, as we look towards the next fifty to one hundred years, if we really can come up with these machines that can capture an underlying spirit, or an underlying set of principles, or an underlying way of looking at the world, then, when the next Aristotle comes around, maybe if he carries around one of these machines with him his whole life—his or her whole life—and types in all this stuff, then maybe someday, after this person’s dead and gone, we can ask this machine, “Hey, what would Aristotle have said? What about this?” And maybe we won’t get the right answer, but maybe we will.
+Evidenziazione (giallo) - Speech at the International Design Conference in Aspen &gt; Posizione 343</p><p style="text-align:center;">---</p><p>What we want to do is put an incredibly great computer in a book that you carry around with you, that you can learn how to use in twenty minutes. That’s what we want to do. And we want to do it this decade. And we really want to do it with a radio link in it so you don’t have to hook up to anything—you’re
+Evidenziazione (giallo) - Speech at the International Design Conference in Aspen &gt; Posizione 349</p><p style="text-align:center;">---</p><p>And what I mean by that is, most of us didn’t make the clothes we’re wearing, and we didn’t cook or grow the food that we eat, and we’re speaking a language that was developed by other people, and we use a mathematics that was developed by other people. We are constantly taking. And the ability to put something back into the pool of human experience is extremely neat.
+Part II, 1985–1996Evidenziazione (giallo) - Interview with Terry Gross &gt; Posizione 744</p><p style="text-align:center;">---</p><p>One of the things that I love is that a very small company, if they invest a lot in their website, can look just as formidable and just as solid on the web as a very large company can.
+Evidenziazione (giallo) - Speech at Palo Alto High School &gt; Posizione 906</p><p style="text-align:center;">---</p><p>First and foremost is the notion that your work is different and separate from the rest of your life. If you are passionate about your life and your work, this can’t be so.
+Evidenziazione (giallo) - Speech at Palo Alto High School &gt; Posizione 924</p><p style="text-align:center;">---</p><p>I still regret not kissing Nancy Kinniman in high school. Who knows what might have happened? Maybe she regrets it too …
+Part III, 1996–2011</p><p style="text-align:center;">---</p><p>“Much of what I stumbled into by following my curiosity and intuition turned out to be priceless later on.”
+Evidenziazione (giallo) - Speech at Stanford’s Graduate School of Business &gt; Posizione 1870</p><p style="text-align:center;">---</p><p>“Make what you love your work.”
+Evidenziazione (giallo) - Drafting the Stanford Commencement Address &gt; Posizione 1936</p><p style="text-align:center;">---</p><p>“If this was the last day of my life, would I rather have dinner with the important customers or her?”
+Evidenziazione (giallo) - Drafting the Stanford Commencement Address &gt; Posizione 1958</p><p style="text-align:center;">---</p><p>“If today was the last day of my life, would I want to do what I am about to do today?” And when the answer has been “NO” for too many days in a row, I know I need to change something in my life.
+Evidenziazione (giallo) - Drafting the Stanford Commencement Address &gt; Posizione 1960</p><p style="text-align:center;">---</p><p>Another way to think about this is that your life is a story. It’s hard to see it that way when you’re looking forward at 22. But imagine yourself as an old person looking back on your life. Your life will be a story. It will be your story, with its highs and lows, its heros and villains, its forks in the road that mean everything. And if you can remember that your life is a story in the making, it will help you make those important decisions.
+Evidenziazione (giallo) - Commencement Address at Stanford University &gt; Posizione 2002</p><p style="text-align:center;">---</p><p>So you have to trust that the dots will somehow connect in your future.
+Evidenziazione (giallo) - Commencement Address at Stanford University &gt; Posizione 2003</p><p style="text-align:center;">---</p><p>Because believing that the dots will connect down the road will give you the confidence to follow your heart, even when it leads you off the well-worn path.
+Evidenziazione (giallo) - Commencement Address at Stanford University &gt; Posizione 2024</p><p style="text-align:center;">---</p><p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven’t found it yet, keep looking.
+Evidenziazione (giallo) - Commencement Address at Stanford University &gt; Posizione 2032</p><p style="text-align:center;">---</p><p>Because almost everything—all external expectations, all pride, all fear of embarrassment or failure—these things just fall away in the face of death, leaving only what is truly important.
+Evidenziazione (giallo) - Email from Steve to Himself &gt; Posizione 2359</p><p style="text-align:center;">---</p><p>I grow little of the food I eat, and of the little I do grow I did not breed or perfect the seeds. I do not make any of my own clothing. I speak a language I did not invent or refine. I did not discover the mathematics I use. I am protected by freedoms and laws I did not conceive of or legislate, and do not enforce or adjudicate. I am moved by music I did not create myself. When I needed medical attention, I was helpless to help myself survive. I did not invent the transistor, the microprocessor, object oriented programming, or most of the technology I work with. I love and admire my species, living and dead, and am totally dependent on them for my life and well being. Sent from my iPad
+One More Thing …</p><p style="text-align:center;">---</p><p>Life can be much broader once you discover one simple fact—and that is: everything around you that you call life was made up by people that were no smarter than you.</p><p style="text-align:center;">---</p></main></body>
+</html>
