--- a/libri.html
+++ b/libri.html
@@ -52,7 +52,7 @@
       di Giava e così mantiene viva la speranza di un posto dove certamente c’è la chiave
       della sua felicità.
  </i> </p></li>
-    <li> <u><a href="kindle_exports/cavaliere_inesistente.html">Il cavaliere inesistente</u></a>
+    <li> <u><a href="kindle_exports/cavaliere-inesistente.html">Il cavaliere inesistente</u></a>
       <p> <i> Ma anch’io quello che voglio è soltanto l’essere uno che sa quello che vuole!
  </i> </p></li>
     <li> A Moveable Feast <p> <i> going down the stairs when i had worked well,
@@ -60,7 +60,7 @@
       was free then to walk anywhere in paris. </p> </i> </li>
     <li> <u>Ametora: How Japan Saved American Style </u> </li>
     <li> Cent'anni di solitudine </li>
-    <li> <u><a href="kindle_exports/splendid_vile.html">The Splendid and the Vile</u></a>
+    <li> <u><a href="kindle_exports/splendid-vile.html">The Splendid and the Vile</u></a>
     <p> <i> At least one brand of toilet paper was also in perilously short supply,
       as the king himself discovered. He managed to sidestep this particular
       scarcity by arranging shipments direct from the British embassy in
@@ -70,7 +70,7 @@
       most acceptable. You will understand this and its name begins with B!!!” </i></p></li>
     <li> The Long Way Home </li>
     <li> Buonanotte, signor Lenin </li>
-    <li> <u><a href="kindle_exports/chiave_stella.html">La chiave a stella</u></a>
+    <li> <u><a href="kindle_exports/chiave-stella.html">La chiave a stella</u></a>
       <p> <i> vado a cercare una certa ragazza e la trovo, mi fa piacere rivederla
         e la porto a cena al Cambio e mi sento grandioso. </i> </p></li>
     <li> After Steve </li>
@@ -84,8 +84,8 @@
       <p> <i> Not a philosopher. Passion for clarity.
         He was simply unable to let things be foggy.
         Since they always are, this kept him pretty active. </i> </p></li>
-    <li> <u><a href="kindle_exports/hk_diaries.html">Hong Kong Diaries</u></a> </li>
-    <li> <a href="kindle_exports/whole_earth.html">Whole Earth</a> <p> <i>
+    <li> <u><a href="kindle_exports/hk-diaries.html">Hong Kong Diaries</u></a> </li>
+    <li> <a href="kindle_exports/whole-earth.html">Whole Earth</a> <p> <i>
       The implication, of course, was that
     computing was the next thing after LSD.</i> </p> </li>
     <li> Hitler's American Gamble </li>
@@ -94,7 +94,7 @@
     <li> Nervous Conditions </li>
     <li> The Making of the Atomic Bomb </li>
     <li> The Soul of a New Machine </li>
-    <li> <u><a href="kindle_exports/why_we_sleep.html">Why We Sleep</u></a> <p> <i>
+    <li> <u><a href="kindle_exports/why-we-sleep.html">Why We Sleep</u></a> <p> <i>
       Sixty years of scientific research prevent
       me from accepting anyone who tells me that he or she can 'get by on just four
       or five hours of sleep a night just fine.'</i> </p> </li>
@@ -187,7 +187,7 @@
     <li> Quer pasticciaccio brutto de via Merulana </li>
     <li> Riccardino </li>
     <li> <u> Postwar </u> </li>
-    <li> <u> Il Gattopardo </u></li>
+    <li> <u><a href="kindle_exports/gattopardo-clean.html">Il Gattopardo</u></a> </li>
     <li> Palomar </li>
     <li> The Ominvore's Dilemma </li>
     <li> All the President's Men</li>
@@ -203,7 +203,7 @@
 
   <h3> 2019 </h3>
   <ol>
-    <li> <u>Il cavaliere inesistente </u></li>
+    <li> <u><a href="kindle_exports/cavaliere-inesistente.html">Il cavaliere inesistente</u></a></li>
     <li> Le Cosmicomiche </li>
     <li> Il sistema periodico </li>
     <li> <u>L'Odissea </u></li>
@@ -222,7 +222,7 @@
     <li> I sette peccati capitali dell'economia italiana </li>
     <li> <u> Macbeth </u> </li>
     <li> Socrate </li>
-    <li> <u><a href="kindle_exports/chiave_stella.html">La chiave a stella</u></a> </li>
+    <li> <u><a href="kindle_exports/chiave-stella.html">La chiave a stella</u></a> </li>
     <li> L'Aleph </li>
     <li> Italiani di domani </li>
     <li> Re Lear </li>
