--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
    e <a href="non-libri.html">non libri</a>.
    <a href="quote.html">qua</a> un po' di quote più o meno lunghe che mi sono piaciute. poi
   <a href="robe-viste.html">roba che vedo</a> così so dove ritrovarla.
-  <a href="robe-scritte.html">qui</a> quello che ho scritto.
-  in <a href="https://open.spotify.com/playlist/37i9dQZF1Epm90W746OUYj?si=F1r2sYjcQteNSdW2ttTu4g">questa playlist</a> quello che sto ascoltando ora. </p>
+  <a href="robe-scritte.html">qui</a> quello che ho scritto. </p>
 
 <p> baci, <br> g <br></p>
 
