--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br> [02/05/23]</i></p>
+<p> Consider a future device for individual use, which is a sort of mechanized private file and library.
+  It needs a name, and to coin one at random, "memex" will do. A memex is a device in which an individual
+  stores all his books, records, and communications, and which is mechanized so that it may be consulted
+  with exceeding speed and flexibility. It is an enlarged intimate supplement to his memory. </p>
+  <p align='right'> Vannevar Bush, <a href="https://www.w3.org/History/1945/vbush/vbush-all.shtml"><i>As We May Think</i></a> </p>
+
+
 <p align="left"> <br> [10/04/23]</i></p>
 <p> <a href="robe-scritte/chatgpt-scpo-iii.html">continuo con l'harassment</a>.
   inclusa anche la risposta di Sergei Guriev, MS, PhD, come ci fa notare.
