--- a/libri.html
+++ b/libri.html
@@ -20,6 +20,7 @@
       <li> Murmurs of Earth: The Voyager Interstellar Record</li>
       <li> <u> The Information: A History, A Theory, A Flood </u>
         <p> <i> The telegraph enabled people to think of weather as a widespread and interconnected affair, rather than an assortment of local surprises. </p> </i> 
+        <p style="text-align:center;">---</p>
         <p> <i> “A scholar,” said Daniel Dennett in 1995, “is just a library’s way of making another library.” </p> </i> </li>
       </li>
       <li>The Man from the Future</li>
@@ -37,6 +38,8 @@
         </i></p></li>
       <li>Moonraker</li>
       <li> <u> Pure Invention - How Japan's Pop Culture Conquered the World</u></li>
+    <li>God, Human, Animal, Machine</li>
+    <li>We are Bellingcat: An Intelligence Agency for the People</li>
   </ol>
 
   <h3> 2022 </h3>
