aggiornamenti home, libri

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br> [17/05/23]</i></p>
+<p> There’s an old joke that says “AI” is what we call anything a computer can’t do yet. (Or perhaps has only just started doing.) </p>
+
 <p align="left"> <br> [02/05/23]</i></p>
 <p> Consider a future device for individual use, which is a sort of mechanized private file and library.
   It needs a name, and to coin one at random, "memex" will do. A memex is a device in which an individual
