--- a/libri.html
+++ b/libri.html
@@ -40,6 +40,7 @@
       <li> <u> Pure Invention - How Japan's Pop Culture Conquered the World</u></li>
     <li>God, Human, Animal, Machine</li>
     <li>We are Bellingcat: An Intelligence Agency for the People</li>
+    <li>The Gate to China</li>
   </ol>
 
   <h3> 2022 </h3>
