--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br> [18/05/23]</i></p>
+<p> <a href="robe-scritte/lavoro.html">lavoro</a>: "Se si escludono istanti prodigiosi e singoli che il destino ci può donare, 
+  l’amare il proprio lavoro (che purtroppo è privilegio di pochi) costituisce la migliore approssimazione concreta alla felicità 
+  sulla terra: ma questa è una verità che non molti conoscono." (P. Levi)</p>
+
 <p align="left"> <br> [17/05/23]</i></p>
 <p> There’s an old joke that says “AI” is what we call anything a computer can’t do yet. (Or perhaps has only just started doing.) </p>
 
