--- a/robe-scritte.html
+++ b/robe-scritte.html
@@ -11,6 +11,7 @@
 <body>
   <h1 align="left"> <a href="index.html">orto</a> > robe scritte  </h1>
 <main class="lineheight">
+<p>[18/05/23] <a href="robe-scritte/lavoro.html">lavoro</a></p>
 <p>[10/04/23] <a href="robe-scritte/chatgpt-scpo-iii.html">chatgpt iii</a></p>
 <p>[07/04/23] <a href="robe-scritte/chatgpt-scpo-ii.html">chatgpt ii</a></p>
 <p>[06/04/23] <a href="robe-scritte/riorientamento.html">riorientamento</a></p>
