--- a/libri.html
+++ b/libri.html
@@ -41,6 +41,7 @@
     <li>God, Human, Animal, Machine</li>
     <li>We are Bellingcat: An Intelligence Agency for the People</li>
     <li>The Gate to China</li>
+    <li>Sled Driver: Flying the World's Fastest Jet</li>
   </ol>
 
   <h3> 2022 </h3>
