--- a/libri.html
+++ b/libri.html
@@ -42,6 +42,7 @@
     <li>We are Bellingcat: An Intelligence Agency for the People</li>
     <li>The Gate to China</li>
     <li>Sled Driver: Flying the World's Fastest Jet</li>
+    <li>Skunk Works</li>
   </ol>
 
   <h3> 2022 </h3>
