--- a/libri.html
+++ b/libri.html
@@ -43,6 +43,7 @@
     <li>The Gate to China</li>
     <li>Sled Driver: Flying the World's Fastest Jet</li>
     <li>Skunk Works</li>
+    <li>The Alignment Problem</li>
   </ol>
 
   <h3> 2022 </h3>
