--- a/libri.html
+++ b/libri.html
@@ -44,6 +44,7 @@
     <li>Sled Driver: Flying the World's Fastest Jet</li>
     <li>Skunk Works</li>
     <li>The Alignment Problem</li>
+    <li>Shareware Heroes</li>
   </ol>
 
   <h3> 2022 </h3>
