--- a/libri.html
+++ b/libri.html
@@ -45,6 +45,7 @@
     <li>Skunk Works</li>
     <li>The Alignment Problem</li>
     <li>Shareware Heroes</li>
+    <li>The Apple II Age: How the Computer Became Personal</li>
   </ol>
 
   <h3> 2022 </h3>
