nuovo robe-viste

--- a/robe-viste.html
+++ b/robe-viste.html
@@ -9,30 +9,22 @@
   <meta name="viewport" content="width=device-width">
   </head>
 <body>
-  <h1 align="left"> <a href="index.html">orto</a> > robe viste  </h1>
+<h1 align="left"> <a href="index.html">orto</a> > robe viste  </h1>
 <main class="lineheight">
-  <p><br></p>
-  <img src="images/scrivania.png" alt=""><p><br></p>
-  <img src="images/nyt.jpeg" alt=""><p><br></p>
-  <img src="images/marteenleon2.png" alt=""><p><br></p>
-  <img src="images/marteenleon1.png" alt=""><p><br></p>
-  <img src="images/4.jpeg" alt="">
-  <p><br></p>
-  <img src="images/chicago-library.jpg" alt="">
-  <p><br></p>
-  <img src="images/chandigarh.jpeg" alt="">
-  <p><br></p>
-  <img src="images/foto.jpg" alt="">
-  <p><br></p>
-  <img src="images/diventare_macbeth.gif" alt="">
-  <p><br></p>
-  <img src="images/3.png" alt="">
-  <p><br></p>
-  <img src="images/2.jpg" alt="">
-  <p><br></p>
-  <img src="images/23_11_22_1.png" alt="">
-  <p align='center'>Jacob E. Tovar</p>
-
+    <div class="responsive-grid">
+      <img class="responsive-image" src="images/scrivania.png" alt="">
+      <img class="responsive-image" src="images/nyt.jpeg" alt="">
+      <img class="responsive-image" src="images/marteenleon2.png" alt="">
+      <img class="responsive-image" src="images/marteenleon1.png" alt="">
+      <img class="responsive-image" src="images/4.jpeg" alt="">
+      <img class="responsive-image" src="images/chicago-library.jpg" alt="">
+      <img class="responsive-image" src="images/chandigarh.jpeg" alt="">
+      <img class="responsive-image" src="images/foto.jpg" alt="">
+      <img class="responsive-image" src="images/diventare_macbeth.gif" alt="">
+      <img class="responsive-image" src="images/3.png" alt="">
+      <img class="responsive-image" src="images/2.jpg" alt="">
+      <img class="responsive-image" src="images/23_11_22_1.png" alt="">
+    </div>
 </main>
 </body>
 </html>
