primo paragrafo giustificato

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1> ciao  </h1>
 <main class="lineheight">
   <p> un digital orto. what will your verse be? </p>
- <p align="left"> l’orto serve a me per raccogliere un po’ dei dati che creo e
+ <p> l’orto serve a me per raccogliere un po’ dei dati che creo e
    tenerli in un posto solo. qua quello che leggo: <a href="libri.html">libri</a> 
    e <a href="non-libri.html">non libri</a>.
    <a href="quote.html">qua</a> un po' di quote più o meno lunghe che mi sono piaciute. poi
@@ -96,8 +96,8 @@
 <p align="left"> <br>[24/11/22] </i></p>
 <p> qui sotto dove mi piacerebbe essere ora.</p>
 <p> baci, <br> g </p>
- <img src="images/dragons-back.jpeg" alt="">
- <p align="center"> Dragon's Back, Hong Kong </p>
+<img src="images/dragons-back.jpeg" alt="">
+<p align="center"> Dragon's Back, Hong Kong </p>
 
 </main>
 </body>
