--- a/libri.html
+++ b/libri.html
@@ -46,6 +46,7 @@
     <li>The Alignment Problem</li>
     <li>Shareware Heroes</li>
     <li>The Apple II Age: How the Computer Became Personal</li>
+    <li>Fancy Bear Goes Phishing</li>  
   </ol>
 
   <h3> 2022 </h3>
