--- a/libri.html
+++ b/libri.html
@@ -46,7 +46,8 @@
     <li>The Alignment Problem</li>
     <li>Shareware Heroes</li>
     <li>The Apple II Age: How the Computer Became Personal</li>
-    <li>Fancy Bear Goes Phishing</li>  
+    <li>Fancy Bear Goes Phishing</li>
+    <li>The Tyranny of Merit</li>  
   </ol>
 
   <h3> 2022 </h3>
