--- a/libri.html
+++ b/libri.html
@@ -47,7 +47,10 @@
     <li>Shareware Heroes</li>
     <li>The Apple II Age: How the Computer Became Personal</li>
     <li>Fancy Bear Goes Phishing</li>
-    <li>The Tyranny of Merit</li>  
+    <li>The Tyranny of Merit</li> 
+    <li> <a href="kindle_exports/lezioni-americane.html"> <u>Lezioni Americane</u></a> 
+      <p> <i> Il mio problema potrebbe essere enunciato così: è possibile raccontare una storia al cospetto dell’universo?
+      </i></p></li>
   </ol>
 
   <h3> 2022 </h3>
