--- a/libri.html
+++ b/libri.html
@@ -50,6 +50,8 @@
     <li>The Tyranny of Merit</li> 
     <li> <a href="kindle_exports/lezioni-americane.html"> <u>Lezioni Americane</u></a> 
       <p> <i> Il mio problema potrebbe essere enunciato così: è possibile raccontare una storia al cospetto dell’universo?
+    <li>Vietnam: An Epic Tragedy</li> 
+    <li>The Bomber Mafia</li> 
       </i></p></li>
   </ol>
 
