--- a/libri.html
+++ b/libri.html
@@ -49,10 +49,10 @@
     <li>Fancy Bear Goes Phishing</li>
     <li>The Tyranny of Merit</li> 
     <li> <a href="kindle_exports/lezioni-americane.html"> <u>Lezioni Americane</u></a> 
-      <p> <i> Il mio problema potrebbe essere enunciato così: è possibile raccontare una storia al cospetto dell’universo?
+      <p> <i> Il mio problema potrebbe essere enunciato così: è possibile raccontare una storia al cospetto dell’universo? </i></p></li>
     <li>Vietnam: An Epic Tragedy</li> 
     <li>The Bomber Mafia</li> 
-      </i></p></li>
+      
   </ol>
 
   <h3> 2022 </h3>
