--- a/libri.html
+++ b/libri.html
@@ -52,6 +52,9 @@
       <p> <i> Il mio problema potrebbe essere enunciato così: è possibile raccontare una storia al cospetto dell’universo? </i></p></li>
     <li>Vietnam: An Epic Tragedy</li> 
     <li>The Bomber Mafia</li> 
+    <li>The Pope at War</li> 
+    <li>Espionage: A Concise History</li>
+    <li>Metropolis: A History of the City</li>  
       
   </ol>
 
