--- a/libri.html
+++ b/libri.html
@@ -54,7 +54,9 @@
     <li>The Bomber Mafia</li> 
     <li>The Pope at War</li> 
     <li>Espionage: A Concise History</li>
-    <li>Metropolis: A History of the City</li>  
+    <li>Metropolis: A History of the City</li>
+    <li>Love and Let Die</li>
+    <li>Storia d'Italia dal dopoguerra ad oggi</li>  
       
   </ol>
 
