--- a/libri.html
+++ b/libri.html
@@ -56,7 +56,9 @@
     <li>Espionage: A Concise History</li>
     <li>Metropolis: A History of the City</li>
     <li>Love and Let Die</li>
-    <li>Storia d'Italia dal dopoguerra ad oggi</li>  
+    <li>Storia d'Italia dal dopoguerra ad oggi</li>
+    <li>L'Italia del tempo presente</li>  
+    <li>Il barone rampante</li>    
       
   </ol>
 
