--- a/libri.html
+++ b/libri.html
@@ -58,7 +58,8 @@
     <li>Love and Let Die</li>
     <li>Storia d'Italia dal dopoguerra ad oggi</li>
     <li>L'Italia del tempo presente</li>  
-    <li>Il barone rampante</li>    
+    <li>Il barone rampante</li>
+    <li>SPQR: A History of Ancient Rome</li>       
       
   </ol>
 
