--- a/libri.html
+++ b/libri.html
@@ -56,8 +56,8 @@
     <li>Espionage: A Concise History</li>
     <li>Metropolis: A History of the City</li>
     <li>Love and Let Die</li>
-    <li>Storia d'Italia dal dopoguerra ad oggi</li>
-    <li>L'Italia del tempo presente</li>  
+    <li><u>Storia d'Italia dal dopoguerra ad oggi</u></li>
+    <li><u>L'Italia del tempo presente</u></li>  
     <li>Il barone rampante</li>
     <li>SPQR: A History of Ancient Rome</li>       
       
