--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
 <p> baci, <br> g <br></p>
 
+<p align="left"> <br> [26/09/23]</i></p>
+<p> ho scritto sulla <a href="https://artifactstech.substack.com/p/se-lintelligenza-artificiale-va-a?utm_source=profile&utm_medium=reader2">newsletter</a> di Lorenzo. <br><br>
+  "The problem was, you can’t ask Aristotle a question. And I think, as we look towards the next fifty to one hundred years, if we really can come up with these machines that can capture an underlying spirit, or an underlying set of principles, or an underlying way of looking at the world, then, when the next Aristotle comes around, [...] after this person’s dead and gone, we can ask this machine, “Hey, what would Aristotle have said? What about this?” (S. Jobs)
+</p>
+
 <p align="left"> <br> [18/05/23]</i></p>
 <p> <a href="robe-scritte/lavoro.html">lavoro</a>: "Se si escludono istanti prodigiosi e singoli che il destino ci può donare, 
   l’amare il proprio lavoro (che purtroppo è privilegio di pochi) costituisce la migliore approssimazione concreta alla felicità 
