--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   sulla terra: ma questa è una verità che non molti conoscono." (P. Levi)</p>
 
 <p align="left"> <br> [17/05/23]</i></p>
-<p> There’s an old joke that says “AI” is what we call anything a computer can’t do yet. (Or perhaps has only just started doing.) </p>
+<p> <i>There’s an old joke that says “AI” is what we call anything a computer can’t do yet. (Or perhaps has only just started doing.) </i></p>
 
 <p align="left"> <br> [02/05/23]</i></p>
-<p> Consider a future device for individual use, which is a sort of mechanized private file and library.
+<p> <i>Consider a future device for individual use, which is a sort of mechanized private file and library.
   It needs a name, and to coin one at random, "memex" will do. A memex is a device in which an individual
   stores all his books, records, and communications, and which is mechanized so that it may be consulted
-  with exceeding speed and flexibility. It is an enlarged intimate supplement to his memory. </p>
+  with exceeding speed and flexibility. It is an enlarged intimate supplement to his memory. </i> </p>
   <p align='right'> Vannevar Bush, <a href="https://www.w3.org/History/1945/vbush/vbush-all.shtml"><i>As We May Think</i></a> </p>
 
 
