--- a/robe-scritte.html
+++ b/robe-scritte.html
@@ -11,6 +11,7 @@
 <body>
   <h1 align="left"> <a href="index.html">orto</a> > robe scritte  </h1>
 <main class="lineheight">
+<p>[04/10/23] <a href="robe-scritte/arrabbiarsi.html">arrabbiarsi</a></p>
 <p>[26/09/23] <a href="https://artifactstech.substack.com/p/se-lintelligenza-artificiale-va-a?utm_source=profile&utm_medium=reader2">newsletter lollo</a></p>
 <p>[18/05/23] <a href="robe-scritte/lavoro.html">lavoro</a></p>
 <p>[10/04/23] <a href="robe-scritte/chatgpt-scpo-iii.html">chatgpt iii</a></p>
